# Committed but Unreleased Changes

# ArgumentChecks, DataMappingValidator, WebDriverWrapper, & Scripts

**ArgumentChecks**
- Improved greaterThanZero and notNegative checks to include BigDecimal and BigInteger.

**DataMappingValidator**
- Renamed `compair` method to `compare`. (BREAKING CHANGE!)

**WebDriverWrapper**
- Updated Chrome Drivers to v80.0.3987.106
- IE_WIN now defaults to 32 bit
- Fixed FIREFOX_WIN bug in Firefox Constructor
- Fixed Firefox StaleElementReferenceException bug, when getting an element

**Scripts**
- SQL-RowMapper-POJO-Generator:
-- Improved Number Data Types
-- Fixed NULLs in Where clause

# Expected Release: v1.19.0