@@ -7,7 +7,7 @@
 
     <groupId>xyz.swatt</groupId>
     <artifactId>swatt</artifactId>
-    <version>1.19.0-SNAPSHOT</version>
+    <version>1.19.0</version>
 
     <packaging>jar</packaging>
     <name>SWATT</name>
